chore: move `docker` roles to `deadnews.util` collection

--- a/molecule/playbooks/converge.yml
+++ b/molecule/playbooks/converge.yml
@@ -1,8 +1,9 @@
 ---
-# Test Ansible Roles with Molecule and Docker
+# Default converge playbook for Molecule
 
 - name: Converge
   hosts: all
+
   tasks:
     - name: Test role
       ansible.builtin.import_role:
