test: update `molecule` configuration

--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -7,7 +7,7 @@
   vars:
     docker_rootless: false
 
-- name: Setup Traefik
+- name: Deploy Traefik
   ansible.builtin.import_role:
     name: deadnews.util.docker_compose
   vars:
