--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 env:
-  COLLECTIONS_PATH: .ansible
+  ANSIBLE_COLLECTIONS_PATH: .ansible
   PY_COLORS: "1"
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
         uses: actions/cache@v4
         with:
           key: reqs-${{ runner.os }}-${{ hashFiles('requirements.yml') }}
-          path: ${{ env.COLLECTIONS_PATH }}
+          path: ${{ env.ANSIBLE_COLLECTIONS_PATH }}
 
       - name: Install poetry
         run: pipx install poetry
@@ -61,7 +61,7 @@ jobs:
         uses: actions/cache@v4
         with:
           key: reqs-${{ runner.os }}-${{ hashFiles('requirements.yml') }}
-          path: ${{ env.COLLECTIONS_PATH }}
+          path: ${{ env.ANSIBLE_COLLECTIONS_PATH }}
 
       - name: Install poetry
         run: pipx install poetry
