--- a/roles/traefik/files/docker-compose.yml
+++ b/roles/traefik/files/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - 80:80 # The HTTP port
       - 8080:8080 # The Web UI (enabled by --api.insecure=true)
     volumes:
-      - ${XDG_RUNTIME_DIR:-"/var/run/"}/docker.sock:/var/run/docker.sock:ro
+      - ${XDG_RUNTIME_DIR:-/var/run/}/docker.sock:/var/run/docker.sock:ro
