--- a/roles/traefik/files/docker-compose.yml
+++ b/roles/traefik/files/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - --providers.docker=true # Enabling Docker provider
       - --providers.docker.exposedbydefault=false # Do not expose containers unless explicitly told so
       - --entrypoints.web.address=:80 # Traefik will listen to incoming request on the port 80 (HTTP)
+      - --ping=true
     ports:
-      - 8000:8000 # The HTTP port
+      - 80:80 # The HTTP port
       - 8080:8080 # The Web UI (enabled by --api.insecure=true)
     volumes:
       - ${XDG_RUNTIME_DIR:-/var/run/}/docker.sock:/var/run/docker.sock:ro
