--- a/requirements.yml
+++ b/requirements.yml
@@ -6,5 +6,5 @@ collections:
   - name: community.general
     version: 8.4.0
 
-  - name: community.docker
-    version: 3.8.0
+  - name: deadnews.util
+    version: 1.0.0-alpha.3
