--- a/roles/traefik/molecule/traefik/molecule.yml
+++ b/roles/traefik/molecule/traefik/molecule.yml
@@ -5,9 +5,15 @@ driver:
 platforms:
   - name: ${MOLECULE_DISTRO:-debian12}
     image: geerlingguy/docker-${MOLECULE_DISTRO:-debian12}-ansible:latest
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
+    pre_build_image: true
 
 provisioner:
   name: ansible
   playbooks:
     converge: ../../../../molecule/playbooks/converge.yml
-    prepare: ../../../../molecule/playbooks/prepare-systemctl.yml
+    prepare: ../../../../molecule/playbooks/prepare-systemd.yml
