--- a/molecule/playbooks/prepare-systemctl.yml
+++ b/molecule/playbooks/prepare-systemctl.yml
@@ -1,7 +1,5 @@
 ---
-# Install docker-systemctl-replacement to allow systemd commands to be run in a container
-
-- name: Prepare
+- name: Install docker-systemctl-replacement
   hosts: all
   vars:
     version: 1.5.8066 # renovate: datasource=pypi dep_name=docker-systemctl-replacement
