--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -7,13 +7,20 @@
   vars:
     docker_rootless: false
 
+- name: Create a network for Traefik
+  community.docker.docker_network:
+    name: traefik_public
+
 - name: Deploy Traefik
   ansible.builtin.import_role:
     name: deadnews.util.docker_compose
   vars:
     docker_compose_project: traefik
     docker_compose_target_dir: ~/docker-compose
-    docker_compose_source: files/docker-compose.yml
+    docker_compose_files:
+      - src: files/docker-compose.yml
+    docker_compose_containers_check:
+      - traefik
 
 - name: Verify that Traefik is responding
   ansible.builtin.uri:
