--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        molecule-distro: [debian12, ubuntu2204]
+        molecule-distro: [debian12, ubuntu2204, ubuntu2404]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
