feat(traefik): update role

--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -5,28 +5,22 @@
   ansible.builtin.import_role:
     name: deadnews.util.docker
   vars:
-    docker_rootless_expose_privileged_ports: true
-    docker_rootless: true
+    docker_rootless: false
 
-- name: Setup Traefik
-  become: true
-  become_user: rootless
-  become_flags: --login
-  block:
-    - name: Create a network for Traefik
-      community.docker.docker_network:
-        name: traefik_public
+- name: Create a network for Traefik
+  community.docker.docker_network:
+    name: traefik_public
 
-    - name: Deploy Traefik
-      ansible.builtin.import_role:
-        name: deadnews.util.docker_compose
-      vars:
-        docker_compose_project: traefik
-        docker_compose_target_dir: ~/docker-compose
-        docker_compose_files:
-          - src: files/docker-compose.yml
-        docker_compose_containers_check:
-          - traefik
+- name: Deploy Traefik
+  ansible.builtin.import_role:
+    name: deadnews.util.docker_compose
+  vars:
+    docker_compose_project: traefik
+    docker_compose_target_dir: ~/docker-compose
+    docker_compose_files:
+      - src: files/docker-compose.yml
+    docker_compose_containers_check:
+      - traefik
 
 - name: Verify that Traefik is responding
   ansible.builtin.uri:
