--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
-// Workspace settings override user settings.
 {
   "[ansible]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "[toml]": {
     "editor.formatOnSave": true
   },
   "ansible.ansible.reuseTerminal": true,
@@ -13,7 +15,8 @@
     "**/roles/**/*.yml": "ansible",
     "**/tasks/**/*.yml": "ansible",
     ".ansible-lint": "yaml",
-    "ansible.cfg": "properties"
+    "ansible.cfg": "properties",
+    "docker-compose.yml": "dockercompose"
   },
   "python.testing.pytestEnabled": true
 }
