--- a/roles/traefik/files/docker-compose.yml
+++ b/roles/traefik/files/docker-compose.yml
@@ -9,6 +9,7 @@ services:
   traefik:
     image: traefik:3.0.0@sha256:7996bdae8aaa70eaacf2978b6c949de5b68c0a24ddc3e40c06344ecc88cfaea3
     container_name: traefik
+    restart: unless-stopped
     networks:
       - traefik_public
       - socket_proxy
