--- a/roles/traefik/files/docker-compose.yml
+++ b/roles/traefik/files/docker-compose.yml
@@ -1,8 +1,8 @@
 ---
 networks:
-  traefik_public:
+  traefik-public:
     external: true
-  socket_proxy:
+  socket-proxy:
     external: false
 
 services:
@@ -11,10 +11,16 @@ services:
     container_name: traefik
     restart: unless-stopped
     networks:
-      - traefik_public
-      - socket_proxy
+      - traefik-public
+      - socket-proxy
     depends_on:
-      - socket_proxy
+      - socket-proxy
+    healthcheck:
+      test: [CMD, traefik, healthcheck, --ping]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
     ports:
       # "web" HTTP listener
       - "0.0.0.0:80:80/tcp"
@@ -25,28 +31,28 @@ services:
       - --entrypoints.web.address=:80
       - --metrics.prometheus=true
       - --ping=true
-      - --providers.docker.endpoint=tcp://socket_proxy:2375
+      - --providers.docker.endpoint=tcp://socket-proxy:2375
       - --providers.docker.exposedbydefault=false
-      - --providers.docker.network=traefik_public
+      - --providers.docker.network=traefik-public
       - --providers.docker=true
     labels:
       - traefik.enable=true
       - traefik.http.routers.api_route.entrypoints=web
       - traefik.http.routers.api_route.rule=Host(`traefik.localhost`)
       - traefik.http.routers.api_route.service=api@internal
+
+  # Security-enhanced proxy for the Docker Socket
+  socket-proxy:
+    image: tecnativa/docker-socket-proxy:0.1.2@sha256:dc8ec925b1360c54e6bf350602d6faac4e33c5d8d809118e4c000c0b14a4529a
+    restart: unless-stopped
+    networks:
+      - socket-proxy
     healthcheck:
-      test: [CMD, traefik, healthcheck, --ping]
+      test: wget --no-verbose --tries=1 --spider http://127.0.0.1:2375/version || exit 1
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 5s
-
-  # Security-enhanced proxy for the Docker Socket
-  socket_proxy:
-    image: tecnativa/docker-socket-proxy:0.1.2@sha256:dc8ec925b1360c54e6bf350602d6faac4e33c5d8d809118e4c000c0b14a4529a
-    restart: unless-stopped
-    networks:
-      - socket_proxy
     volumes:
       - ${XDG_RUNTIME_DIR:-/var/run}/docker.sock:/var/run/docker.sock:ro
     environment:
