chore: set `stdout_callback` to `community.general.yaml`

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -22,6 +22,8 @@ fact_caching_connection = .facts_cache/
 # Setup callbacks
 stdout_callback = community.general.yaml
 callbacks_enabled = ansible.posix.profile_tasks
+# Use the stdout_callback for ad-hoc commands
+bin_ansible_callbacks = True
 
 [callback_profile_tasks]
 task_output_limit = 4
