--- a/roles/traefik/molecule/traefik/molecule.yml
+++ b/roles/traefik/molecule/traefik/molecule.yml
@@ -16,6 +16,7 @@ provisioner:
   name: ansible
   env:
     ANSIBLE_VERBOSITY: 0
+    ANSIBLE_STDOUT_CALLBACK: community.general.yaml
   playbooks:
     converge: ../../../../molecule/playbooks/converge.yml
     prepare: ../../../../molecule/playbooks/prepare-systemd.yml
