feat(traefik): update role

--- a/roles/traefik/files/docker-compose.yml
+++ b/roles/traefik/files/docker-compose.yml
@@ -44,6 +44,7 @@ services:
   # Security-enhanced proxy for the Docker Socket
   socket-proxy:
     image: tecnativa/docker-socket-proxy:0.1.2@sha256:dc8ec925b1360c54e6bf350602d6faac4e33c5d8d809118e4c000c0b14a4529a
+    container_name: socket-proxy
     restart: unless-stopped
     networks:
       - socket-proxy
