--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -19,8 +19,14 @@
     docker_compose_target_dir: ~/docker-compose
     docker_compose_files:
       - src: files/docker-compose.yml
+    docker_compose_show_files: true
+    docker_compose_sleep_time: 2
+    docker_compose_containers_logs:
+      - traefik
+      - socket-proxy
     docker_compose_containers_check:
       - traefik
+      - socket-proxy
 
 - name: Verify that Traefik is responding
   ansible.builtin.uri:
