feat(traefik): update role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,6 +10,9 @@ roles_path = roles
 # Disable SSH key host checking
 host_key_checking = False
 
+# Python Interpreter Discovery
+interpreter_python = auto_silent
+
 # Task execution is as fast as possible per host in batch as defined by forks or serial
 strategy = host_pinned
 forks = 30
