feat(traefik): update role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -21,12 +21,11 @@ forks = 30
 gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = .facts_cache/
+fact_caching_timeout = 7200
 
 # Setup callbacks
 stdout_callback = community.general.yaml
 callbacks_enabled = ansible.posix.profile_tasks
-# Use the stdout_callback for ad-hoc commands
-bin_ansible_callbacks = True
 
 [callback_profile_tasks]
-task_output_limit = 4
+task_output_limit = 3
