--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -19,14 +19,17 @@
     docker_compose_target_dir: ~/docker-compose
     docker_compose_files:
       - src: files/docker-compose.yml
+      - src: templates/vector.yml.j2
     docker_compose_files_show: true
     docker_compose_sleep_time: 2
     docker_compose_containers_logs:
       - traefik
-      - traefik-socket-proxy
+      - traefik-dsproxy
+      - traefik-vector
     docker_compose_containers_check:
       - traefik
-      - traefik-socket-proxy
+      - traefik-dsproxy
+      - traefik-vector
       - whoami
 
 - name: Verify that Traefik is responding
