--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -19,23 +19,18 @@
     docker_compose_target_dir: ~/docker-compose
     docker_compose_files:
       - src: files/docker-compose.yml
+      - src: templates/vector.yml.j2
     docker_compose_files_show: true
     docker_compose_sleep_time: 2
     docker_compose_containers_logs:
       - traefik
-      - traefik-socket-proxy
+      - traefik-dsproxy
+      - traefik-vector
     docker_compose_containers_check:
       - traefik
-      - traefik-socket-proxy
+      - traefik-dsproxy
+      - traefik-vector
       - whoami
-
-- name: Verify that Traefik is responding
-  ansible.builtin.uri:
-    url: http://127.0.0.1:8080/ping
-  register: traefik_verify
-  retries: 12
-  delay: 5
-  until: traefik_verify is not failed
 
 - name: Verify that Whoami is responding
   ansible.builtin.uri:
