--- a/ansible.cfg
+++ b/ansible.cfg
@@ -24,7 +24,7 @@ fact_caching_connection = .facts_cache/
 fact_caching_timeout = 7200
 
 # Setup callbacks
-stdout_callback = community.general.yaml
+callback_result_format = yaml
 callbacks_enabled = ansible.posix.profile_tasks
 
 [callback_profile_tasks]
